# nebuladec

./: .cppcheck_suppressions  .cspell.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  build.sh  build_depends.repos  pixi.toml  setup.sh
.github/: sync-files.yaml
.github/workflows/: build-and-test-differential.yaml  build-and-test.yaml  create-ros2-package.yaml  pre-commit.yaml
.rosdep/: local.yaml
nebuladec_adapters/: CMakeLists.txt  package.xml
nebuladec_adapters/include/nebuladec_adapters/: decoder.hpp
nebuladec_adapters/src/: decoder.cpp  placeholder.cpp  robosense_adapter.cpp  seyond_adapter.cpp
nebuladec_adapters/test/: test_decoder.cpp  test_hesai_adapter.cpp  test_robosense_adapter.cpp
nebuladec_bag/: package.xml
nebuladec_bag/include/nebuladec_bag/: bag_io.hpp
nebuladec_bag/src/: bag_io.cpp
nebuladec_cli/src/: main.cpp
nebuladec_core/: CMakeLists.txt  package.xml
nebuladec_core/include/nebuladec_core/: any_decoder.hpp  decoder.hpp  identity.hpp
nebuladec_core/src/: decoder.cpp  packet_sniffer.cpp
nebuladec_core/test/: test_packet_sniffer.cpp
scripts/: install-launcher.sh  merge-compile-commands.sh  pixi-activate-build-compat.sh  pixi-activate-overlay.sh
src/nebuladec_adapters/: CMakeLists.txt  README.md  package.xml
src/nebuladec_adapters/include/nebuladec_adapters/: accelerated_hesai_decoder.hpp  accelerated_hesai_driver.hpp  accelerated_seyond_decoder.hpp  accelerated_velodyne_decoder.hpp  accelerated_velodyne_driver.hpp  decoder.hpp  fast_hesai_decoder.hpp  fast_hesai_driver.hpp  fast_seyond_decoder.hpp  fast_velodyne_decoder.hpp  fast_velodyne_driver.hpp  hesai_adapter.hpp  robosense_adapter.hpp  seyond_adapter.hpp  velodyne_adapter.hpp
src/nebuladec_adapters/src/: accelerated_hesai_driver.cpp  accelerated_seyond_decoder.cpp  accelerated_velodyne_decoder.cpp  accelerated_velodyne_driver.cpp  decoder.cpp  fast_hesai_driver.cpp  fast_seyond_decoder.cpp  fast_velodyne_decoder.cpp  fast_velodyne_driver.cpp  hesai_adapter.cpp  robosense_adapter.cpp  seyond_adapter.cpp  seyond_decoder.cpp  seyond_decoder.hpp  velodyne_adapter.cpp
src/nebuladec_adapters/test/: test_decoder.cpp  test_decoder_concurrency.cpp  test_decoder_integration.cpp  test_hesai_adapter.cpp  test_robosense_adapter.cpp  test_seyond_decoder.cpp  test_velodyne_adapter.cpp
src/nebuladec_bag/: CMakeLists.txt  README.md  package.xml
src/nebuladec_bag/docs/: parallel_convert.md
src/nebuladec_bag/include/nebuladec_bag/: bag_io.hpp  message_definition.hpp  point_cloud2.hpp
src/nebuladec_bag/src/: ament_message_loader.cpp  ament_message_loader.hpp  bag_io.cpp  convert_parallel.cpp  convert_parallel.hpp  mcap_definition_source.cpp  mcap_definition_source.hpp  mcap_definition_writer.cpp  mcap_definition_writer.hpp  message_definition.cpp  output_writer.cpp  output_writer.hpp  packet_source.cpp  packet_source.hpp  point_cloud2.cpp  sqlite_definition_source.cpp  sqlite_definition_source.hpp
src/nebuladec_bag/test/: test_convert_cross_format.cpp  test_convert_embedded_definition.cpp  test_convert_hesai_qt128.cpp  test_convert_mcap_options.cpp  test_convert_parallel_equivalence.cpp  test_convert_parallel_kway_merge.cpp  test_convert_progress.cpp  test_convert_velodyne_vlp16.cpp  test_convert_workers_one.cpp  test_detect_input.cpp  test_message_definition_source.cpp  test_point_cloud2.cpp
src/nebuladec_cli/: CMakeLists.txt  README.md  package.xml
src/nebuladec_cli/src/: main.cpp
src/nebuladec_core/: CMakeLists.txt  README.md  package.xml
src/nebuladec_core/include/nebuladec_core/: any_decoder.hpp  identity.hpp  packet_sniffer.hpp  profiling.hpp  support_registry.hpp  topic_mapping.hpp
src/nebuladec_core/src/: packet_sniffer.cpp  profiling.cpp  support_registry.cpp  topic_mapping.cpp
src/nebuladec_core/test/: test_packet_sniffer.cpp  test_support_registry.cpp  test_topic_mapping.cpp
