<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nebuladec_adapters</name>
  <version>0.0.0</version>
  <description>
    Vendor-specific adapters that wrap Nebula drivers behind the
    nebuladec_core AnyDecoder interface, plus the top-level Decoder
    facade that routes packets to the right adapter.
  </description>
  <maintainer email="opensource@tier4.jp">TIER IV</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- nebuladec_core types appear in this package's public headers
       (any_decoder.hpp, identity.hpp), so it stays an exported dependency. -->
  <depend>nebuladec_core</depend>

  <!-- The vendor drivers and ament_index_cpp are used only in the .cpp
       sources, never in public headers. Declared build + exec so the heavy
       Hesai/Velodyne decoder headers are not re-exported to downstream
       packages (e.g. nebuladec_bag), which never include them directly. -->
  <build_depend>ament_index_cpp</build_depend>
  <build_depend>nebula_hesai_common</build_depend>
  <build_depend>nebula_hesai_decoders</build_depend>
  <build_depend>nebula_velodyne_common</build_depend>
  <build_depend>nebula_velodyne_decoders</build_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>nebula_hesai_common</exec_depend>
  <exec_depend>nebula_hesai_decoders</exec_depend>
  <exec_depend>nebula_velodyne_common</exec_depend>
  <exec_depend>nebula_velodyne_decoders</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
