<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nebuladec_bag</name>
  <version>0.0.0</version>
  <description>
    Rosbag2 I/O for nebuladec: inspect and decode Nebula packet bags into
    PointCloud2 bags, mirroring the input's storage plugin (mcap or
    sqlite3) and layout (single file or metadata.yaml directory).
  </description>
  <maintainer email="opensource@tier4.jp">TIER IV</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>libsqlite3-dev</depend>
  <depend>nebula_msgs</depend>
  <depend>nebuladec_adapters</depend>
  <depend>pandar_msgs</depend>
  <depend>rclcpp</depend>
  <depend>robosense_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>sensor_msgs</depend>
  <depend>velodyne_msgs</depend>

  <exec_depend>rosbag2_storage_mcap</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
