<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nebuladec_core</name>
  <version>0.0.0</version>
  <description>
    Core abstractions for nebuladec: vendor/model inference from raw Nebula
    packet bytes and the vendor-agnostic Decoder facade that returns
    NebulaPointCloud.
  </description>
  <maintainer email="opensource@tier4.jp">TIER IV</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>nebula_core_common</depend>
  <depend>nebula_seyond_common</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
