<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nebuladec_core</name>
  <version>0.0.0</version>
  <description>
    Core abstractions for nebuladec: vendor/model inference from raw Nebula
    packet bytes and the vendor-agnostic Decoder facade that returns
    NebulaPointCloud.
  </description>
  <maintainer email="opensource@tier4.jp">TIER IV</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- point_types.hpp / nebula_common.hpp appear in this package's public
       headers (any_decoder.hpp, identity.hpp), so this stays exported. -->
  <depend>nebula_core_common</depend>

  <!-- yaml-cpp is used only in the .cpp sources and linked into the library;
       it is not exposed in any public header. Declared as build plus exec
       dependencies instead of an exported one, so it is not re-exported to
       downstream packages. -->
  <build_depend>yaml_cpp_vendor</build_depend>
  <exec_depend>yaml_cpp_vendor</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
